# irc-haskell

./: .gitignore  README.md  main.cabal  replycodes.hs  run-tests.sh
app/: IRCData.hs  Main.hs  MessageParser.hs  MessageReceiver.hs  ReplyGenerator.hs  Server.hs
tests/: report.html  report.json
