name:                chirc
version:             0.1.0.0
synopsis:            IRC server
-- description:         
-- homepage:            
-- license:             
-- license-file:        
author:              E-Lynn Yap
maintainer:          yapelynn@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.12

executable chat-server-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base, 
                        network, 
                        split, 
                        hostname, 
                        options, 
                        unordered-containers 
   default-language:    Haskell2010
